# complicated-linkage-example

./: Cargo.toml  README.md
curl/: Cargo.toml  lib.rs
curl-build/: Cargo.toml  build.rs
curl-sys/: Cargo.toml  build.rs  lib.rs
flate2/: Cargo.toml  lib.rs
git2/: Cargo.toml  lib.rs
libgit2-build/: Cargo.toml  build.rs
libgit2-sys/: Cargo.toml  build.rs
libssh2-build/: Cargo.toml  build.rs
libssh2-sys/: Cargo.toml  build.rs  lib.rs
libz-build/: Cargo.toml
libz-sys/: Cargo.toml  build.rs  lib.rs
miniz-build/: Cargo.toml  build.rs  miniz.c
miniz-sys/: Cargo.toml  lib.rs
openssl-sys/: Cargo.toml  build.rs  lib.rs
